Created Test and Method for #2

--- a/CalculatorUnitTest/CalculatorUnitTest.csproj
+++ b/CalculatorUnitTest/CalculatorUnitTest.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AdditionLogic\AdditionLogic.csproj" />
+    <ProjectReference Include="..\SubtractionLogic\SubtractionLogic.csproj" />
   </ItemGroup>
 
 </Project>
